objects/IntegrationAssets__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>IntegrationAccount</label>
        <referenceTo>IntegrationAccount__c</referenceTo>
        <relationshipLabel>IntegrationAssets</relationshipLabel>
        <relationshipName>IntegrationAssets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Asset_Id__c</fullName>
        <label>Asset Id</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Asset_Name__c</fullName>
        <externalId>true</externalId>
        <label>Asset_Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cancel_Date__c</fullName>
        <label>Cancel Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Company_Id__c</fullName>
        <label>Company Id</label>
        <length>38</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>IntegrationContact</label>
        <referenceTo>IntegrationContact__c</referenceTo>
        <relationshipLabel>IntegrationAssets</relationshipLabel>
        <relationshipName>IntegrationAssets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Current_Product__c</fullName>
        <label>Current Product</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_Charge_Date__c</fullName>
        <label>First Charge Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Is_Integrated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Integrated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_Login_Date__c</fullName>
        <label>Last Login Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Next_Charge_Date__c</fullName>
        <label>Next Charge Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>No_Of_Logins__c</fullName>
        <label># of Logins</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Num_of_Invoices__c</fullName>
        <label>Num_of_Invoices</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OLB_Online_Banking__c</fullName>
        <defaultValue>false</defaultValue>
        <label>OLB - Online Banking</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Online_Offer_Code__c</fullName>
        <label>Online Offer Code</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Original_Product__c</fullName>
        <label>Original Product</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_Name__c</fullName>
        <label>Partner Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Setup_Date__c</fullName>
        <label>Payment Setup Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Plan_Name__c</fullName>
        <label>Plan Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product2__c</fullName>
        <label>Product2</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Signup_Date__c</fullName>
        <label>Signup Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Suspend_Date__c</fullName>
        <label>Suspend Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Trial_End_Date__c</fullName>
        <label>Trial End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>isParent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Parent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>status__c</fullName>
        <label>status</label>
        <length>30</length>
        <type>Text</type>
    </fields>
</CustomObject>